[web] Add: Task #5781 Fix property detail img and label align

--- a/source/web/src/static/styles/propertyDetails.less
+++ b/source/web/src/static/styles/propertyDetails.less
@@ -400,6 +400,7 @@ body{
                     float:left;
                     display:inline-block;
                     margin-right:5px;
+                    margin-top:3px;
                 }
 
                 label {
